--- a/bio.html
+++ b/bio.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
 <html>
+	
 <head>
+	<meta charset="utf-8">
 	<title>Student Bio</title>
+	<link rel="stylesheet" type="text/css" href="biostyles.css">
 </head>
+
 <body>
 
+<header>
 <h1>Student Bio</h1>
+</header>
+
+<div class="container">
+
+	<section id="main-bio">
 
 	<h2>Jeanmarie Martinko</h2>
 
-	<img src="JM1122.jpg">
+	<img id="bio-image" src="JM1122.jpg" alt="An image of JM with Annamae">
 
-	<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+	<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+	</section>
+
+	<section id="contact-info"> 
 
 	<h2>Contact Info</h2>
 
 	<ul>
 
-	<li><strong>Email:</strong> <a>jeanmarie@dynamicalperspectives.com</a></li>
-	<li><strong>Github:</strong><a href="#">DynamicalPerspectives</a>
-	<li><strong>Portfolio:</strong> <a href="#"></a>coming soon</u></li>
+	<li><strong>Email:</strong> <a
+	href="#">jeanmarie@dynamicalperspectives.com</a>
+	</li>
+	<li><strong>Github:</strong><a
+	href="#">DynamicalPerspectives</a>
+	</li>
+	<li><strong>Portfolio:</strong> <a 
+	href="#"></a href="#">coming soon</a>
+	</li>
 	
 	</ul>
 
+	</section>
+
+	</div>
+
 </body>
+
 </html>
